# datascience-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  licenses.md  pyproject.toml
hooks/: post_gen_project.sh  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.template  pyproject.toml
{{cookiecutter.project_slug}}/src/: __init__.py  cli.py  {{cookiecutter.__module_slug}}.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: cli.py
{{cookiecutter.project_slug}}/tests/: __init.py__  test_cli.py
